--- a/esmvaltool/recipes/recipe_autoassess_landsurface_snow.yml
+++ b/esmvaltool/recipes/recipe_autoassess_landsurface_snow.yml
@@ -44,7 +44,7 @@ diagnostics:
         fx: [sftlf]
         start: 1997/12/01
         end: 2002/12/01
-        climfiles_root: '/group_workspaces/jasmin4/esmeval/for_vp/obs_etc'
+        climfiles_root: '/group_workspaces/jasmin4/esmeval/autoassess_specific_files/files'  # on Jasmin
 
   plot_standard:
     description: Wrapper to collect and plot previously calculated metrics
