--- a/esmvaltool/recipes/recipe_hyint.yml
+++ b/esmvaltool/recipes/recipe_hyint.yml
@@ -44,6 +44,7 @@ diagnostics:
         rgrid: false   
         # Reference normalization period to be used for normalized indices 
         norm_years: [2004,2006]
+
         # Select type of plot:
         # 1) lon/lat maps per individual field/exp/multi-year mean
         # 2) lon/lat maps per individual field/exp-ref-diff/multi-year mean
@@ -55,9 +56,15 @@ diagnostics:
         # 14) summary trend coefficients multiple regions
         # 15) summary trend coefficients multiple models
         # plot_type: [2, 3, 12, 13, 14, 15]
-        plot_type: [15]
+        plot_type: [14]
+        # Select single plot or multi-panel figure
+        multipanel: false
+        # Select number of columns and rows in multi-panel figure
+        npancol: 2 # number of columns for trend/tseries multi-panel figures
+        npanrow: 3 # number of rows for trend/tseries multi-panel figures  
         # User defined label to be added to trends and figures filename
         label: "test"
+
         # Select regions for timeseries and maps from the following list
         # 1=World, 2=World60 (60S/60N),3=Tropics (30S/30N), 4=South America, 
         # 5=Africa,6=Northi,7=America,8=India,9=Europe,10=East-Asia,
@@ -67,8 +74,9 @@ diagnostics:
         # list (order-sensitive): 
         # SDII, DSL, WSL, HY-INT, ABS_INT, ABS_DSL, ABS_WSL, PA, R95 
         selfields: [8, 4, 1, 9, 3, 2]
+       # Select automated or pre-set range of values in plots
+        autolevels: true       
 
-       
         ## ------- Advanced settings ----------
         
         topography_highres: "~/work/data/Elevation/GMTED2010_15n030_0125deg.nc"
