switching to are-weighted preproc

--- a/esmvaltool/recipes/recipe_zmnam.yml
+++ b/esmvaltool/recipes/recipe_zmnam.yml
@@ -30,7 +30,7 @@ preprocessors:
       scheme: nearest
     regrid:  
       target_grid: 3x3 
-      scheme: linear
+      scheme: area_weighted
     extract_region:
       start_longitude: 0.
       end_longitude: 360.
