updated authors mail address

--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -71,7 +71,7 @@ authors:
   cagn_ch:
     name: Cagnazzo, Chiara
     institute: CNR, Italy
-    email: c.cagnazzo 'at' isac.cnr.it    
+    email: chiara.cagnazzo 'at' cnr.it    
   chen_ja:
     name: Chen, Jack
     institute: NCAR, USA
