Revert "removed use_fx_files argument as it was not needed."
This reverts commit 90874d6f15f52e0bf7662fa1716abab0158e0890.

--- a/esmvaltool/recipes/recipe_ocean_bgc.yml
+++ b/esmvaltool/recipes/recipe_ocean_bgc.yml
@@ -57,6 +57,7 @@ preprocessors:
       coord1: longitude
       coord2: latitude
       coordz: depth
+      use_fx_files: true
     multi_model_statistics:
       span: overlap
       statistics: [mean ]
@@ -67,6 +68,7 @@ preprocessors:
     average_region:
       coord1: longitude
       coord2: latitude
+      use_fx_files: true
     multi_model_statistics:
       span: overlap
       statistics: [mean ]
@@ -80,6 +82,7 @@ preprocessors:
     average_region:
       coord1: longitude
       coord2: latitude
+      use_fx_files: true
     multi_model_statistics:
       span: overlap
       statistics: [mean ]
@@ -109,10 +112,12 @@ preprocessors:
       target_grid: 1x1
       scheme: linear
 
+
   prep_global_profile:
     average_region:
       coord1: longitude
       coord2: latitude
+      use_fx_files: true
 
   prep_transect_AMT: # Atlantic Meridional Transect (28W)
     custom_order: true
