--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -84,6 +84,10 @@ authors:
     name: Cionni, Irene
     institute: ENEA, Italy
     email: irene.cionni 'at' enea.it
+  cort_ni:
+    name: Nicola Cortesi
+    institute: BSC, Spain
+    email: nicola.cortesi 'at' bsc.es
   davi_ed:
     name: Davin, Edouard Leopold
     institute: ETH, CH
@@ -96,6 +100,10 @@ authors:
     name: Frank, Franziska
     institute: DLR, Germany
     email: franziska.frank 'at' dlr.de
+  fuck_ne:
+    name: Neven Fuckar
+    institute: BSC, Spain
+    email: neven.fuckar 'at' bsc.es
   gain_al:
     name: Gainusa-Bogdan, Alina
     institute: France
@@ -111,6 +119,10 @@ authors:
     name: Gottschaldt, Klaus-Dirk
     institute: DLR, Germany
     email: klaus-dirk.gottschaldt 'at' dlr.de
+  guem_vi:
+    name: Virginie Guemas
+    institute: BSC, Spain
+    email: virginie.guemas 'at' bsc.es
   hage_st:
     name: Hagemann, Stefan
     institute: MPI-M, Germany
@@ -166,7 +178,7 @@ authors:
     name: Little, Bill
     institute: MetOffice, UK
     email: bill.little 'at' metoffice.gov.uk
-  llor_ll:
+  lled_ll:
     name: Lledó, Llorenç
     institute: BSC, Spain
     email: llorenç.lledo 'at' bsc.es
@@ -256,6 +268,10 @@ authors:
     name: Teichmann, Claas
     institute: CSC2, Germany
     email: claas.teichmann 'at' hzg.de
+  torr_ve:
+    name: Veronica Torralba
+    institute: BSC, Spain
+    email: veronica.torralba 'at' bsc.es
   tsus_yo:
     name: Tsushima, Yoko
     institute: MetOffice, UK
@@ -456,6 +472,7 @@ references:
   eyring06jgr: "Eyring et al., J. Geophys. Res., 111, D22308, doi:10.1029/2006JD007327, 2006."
   eyring13jgr: "Eyring et al., J. Geophys. Res., 118, 5029-5060, doi:10.1002/jgrd.50316, 2013."
   flato13ipcc: "Flato, G. et al., Evaluation of climate models, in: Climate Change 2013: the Physical Science Basis, 2013."
+  fuckar: "Fuckar et al., Clima Dynam, 47, 5-6, 1527-1543, doi:10.1007/s00382-015-2917-2, 2016."
   gen14jclim: "Gen, L. et al., J. Climate, 27, 1765-1780, doi:10.1175/JCLI-D-13-00337.1, 2014."
   gleckler08jgr: "Gleckler et al., J. Geophys. Res., 113, D06104, doi:10.1029/2007JD008972, 2008."
   goswami99qjrms: "Goswami, B., V. Krishnamurthy, and H. Annamalai, Q. J. R. Meteorol. Soc., 125, 611-633, doi:10.1002/qj.49712555412, 1999."
