--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -534,6 +534,7 @@ projects:
   qa4ecv: QA4ECV
   c3s-magic: Copernicus Climate Change Service 34a Lot 2 (MAGIC) project
   ukesm: UKESM, UK Earth System Model project (NERC)
+  primavera: EU H2020 project PRIMAVERA
 
 realms:
   aerosol: aerosol
