--- a/esmvaltool/recipes/recipe_heatwaves_coldwaves_wp7.yml
+++ b/esmvaltool/recipes/recipe_heatwaves_coldwaves_wp7.yml
@@ -1,29 +1,23 @@
-###############################################################################
-# namelist_heatwaves_coldwaves.yml
-#
-# Description
-# Namelist for computing the number of days excedding a quantile
-# for a minimum number of consecutive days.
-#
-# Authors
-# Alasdair Hunter (BSC, Spain)
-# Nicolau Manubens (BSC, Spain)
-# Louis-Philippe  (BSC, Spain)
-#
-# Project
-# C3S Magic
-#
-#
-#
-#
-# This namelist is part of the ESMValTool
-###############################################################################
+# ESMValTool
+# recipe_heatwaves_coldwaves_wp7.yml
 ---
+documentation:
+  description: |
+    Tool to compute the number of days excedding a quantile
+    for a minimum number of consecutive days.
+
+  authors:
+    - hunt_al
+    - manu_ni
+    - caro_lo
+
+  projects:
+    - c3s-magic
 
 datasets:
   - {dataset: IPSL-CM5A-LR,  type: exp, project: CMIP5,  mip: day,  exp: historical,  ensemble: r1i1p1,  start_year: 1961,  end_year: 1990}
   - {dataset: IPSL-CM5A-LR,  type: exp, project: CMIP5,  mip: day,  exp: rcp85,  ensemble: r1i1p1,  start_year: 2020,  end_year: 2040}
-  #- {dataset: bcc-csm1-1,  type: exp, project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 2000,  end_year: 2004}
+
 
 latlon_roi: (/latmin,latmax,lonmin,lonmax/)
 preprocessors:
