--- a/meta.yaml
+++ b/meta.yaml
@@ -65,6 +65,7 @@ requirements:
     - r-base
     - r-rcpp
     # TODO: add julia
+    - jinja2
 test:
   # TODO: add unit tests? This seems to require installing the tests
   imports:
