added parameters to recipe and implemented provenance

--- a/esmvaltool/recipes/recipe_hyint.yml
+++ b/esmvaltool/recipes/recipe_hyint.yml
@@ -62,8 +62,6 @@ diagnostics:
         # Select number of columns and rows in multi-panel figure
         npancol: 2 # number of columns for trend/tseries multi-panel figures
         npanrow: 3 # number of rows for trend/tseries multi-panel figures  
-        # User defined label to be added to trends and figures filename
-        label: "test"
 
         # Select regions for timeseries and maps from the following list
         # 1=World, 2=World60 (60S/60N),3=Tropics (30S/30N), 4=South America, 
@@ -78,8 +76,51 @@ diagnostics:
         autolevels: true       
 
         ## ------- Advanced settings ----------
+        # data
+        removedesert: false  # T to remove (flag as NA) grid points with mean 
+                             # annual pr < 0.5 mm/day (deserts, Giorgi2014)
+        masksealand: false # T to mask depending on seaLandElevation threshold
+        sealandelevation: 0 # a) 0 land; b) positive value: land above given
+                        # elevation; c) negative value: sea below given depth.
+                        # The topography/bathymetry file is generated with cdo 
+                        # from ETOPO data. 
+        reverse_masksealand: false # T to reject what selected,
+                                   #  F to keep what selected
+
+        # maps
+        oplot_grid: false           # plot grid points over maps
+        map_continents: -2   # thickness of continents:
+                             # positive values in white, negative values in gray
+        map_continents_regions: false # plot also regional boundaries
+        ryearplot: 2006  # years to be plotted for experiments
+                         # (maps over individual years): 
+                         # a) actual years, b) "FIRST" = first year in dataset or 
+                         # c) "ALL"  = all years in dataset. E.g., c(1998,2000,2005)   
+        rmultiyear_mean: true # plot multiyear mean (this override ryearplot)
+ 
+
+        # timeseries and trends
+        weight_tseries: true  # adopt area weights in timeseries
+        trend_years: false    # (a) F=all; (b) c(year1,year2) to apply trend 
+                              # calculation and plotting only to a limited 
+                              # time interval (year1<=years<=year2) 
+                              # c) c(year1,year2,year3,year4) to apply trend to
+                              # two separate time intervals (year1<=y's<=year2) 
+                              # and (year3<=y's<=year4)
+      
+        lm_trend: true              # calculate linear trend
+        add_trend: true             # add linear trend to plot
+        add_trend_sd: false         # add stdev range to timeseries
+        add_trend_sd_shade: false   # add shade of stdev range to timeseries
+        add_tseries_lines: true     # lot lines of timeseries over points
+        add_zeroline: true          # plot a dashed line at y=0
+        trend_years_only: false     # limit timeseries plotting to trend_years
+                                    # time interval
+        scale100years: true         # plot trends as 1/100 years
+        scalepercent: false         # plot trends as % change (excluding hyint) 
+        oplot_grid: false           # plot grid points over maps
         
         topography_highres: "~/work/data/Elevation/GMTED2010_15n030_0125deg.nc"
-        boxregion: false  #-2 # !=0 plot region boxes over maps with thickness = abs(boxregion) and 
-                         # white (>0) or grey (<0).  This automatically works on global maps only.
+        boxregion: false # !=0 plot region boxes over global maps with 
+                         # thickness = abs(boxregion); white (>0) or grey (<0).  
 
